--- a/face_recognize_timekeeping/.env
+++ b/face_recognize_timekeeping/.env
@@ -1,5 +1,5 @@
 BACKEND_API = "http://localhost:3000"
 
-MQTT_HOST=db7263158a8b41ca9fe9ccb36ac4264f.s1.eu.hivemq.cloud
-MQTT_USERNAME=admin
-MQTT_PASSWORD=Admin123@
+MQTT_HOST=6c136d748d20413a803496c6c77821a0.s1.eu.hivemq.cloud
+MQTT_USERNAME=hivemq.webclient.1745744092916
+MQTT_PASSWORD=xQX9;G5LHjm!3:2l<tcD
