--- a/frontend_timekeeping/package.json
+++ b/frontend_timekeeping/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^19.0.4",
     "antd": "^5.24.3",
     "axios": "^1.8.3",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -21,7 +22,8 @@
     "react-router-dom": "^7.4.0",
     "tailwind": "^4.0.0",
     "timekeeping": "file:",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "react-scripts": "^5.0.1",
